# hilbert-moore-treemap-layouts-prototype

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: CompileOptions.cmake
datasets/: .gitignore  CMakeLists.txt  GSL-master-metrics-files.txt  GSL.tar.xz  STL-master-metrics-files.txt  STL.tar.xz  VFSForGit-master-metrics-files.txt  VFSForGit.tar.xz  calculator-master-metrics-files.txt  calculator.tar.xz  cpprestsdk-master-metrics-files.txt  cpprestsdk.tar.xz  firefox-metrics.tar.xz  glbinding-master-metrics-files.txt  glbinding.tar.xz  glfw-master-metrics-files.txt  glfw.tar.xz  globjects-master-metrics-files.txt  globjects.tar.xz  kubernetes-metrics.tar.xz  opensource-portal-master-metrics-files.txt  opensource-portal.tar.xz  tensorflow-tfjs-master-metrics-files.txt  tensorflow-tfjs.tar.xz  thealgorithms-cpp-master-metrics-files.txt  thealgorithms-cpp.tar.xz  visual-analytics-components-master-metrics-files.txt  visual-analytics-components.tar.xz  webgl-operate-master-metrics-files.txt  webgl-operate.tar.xz
hilbert-moore-treemaps/: AbstractBuffer.cpp  AbstractBuffer.h  ArgumentParser.cpp  ArgumentParser.h  ArgumentParser.inl  AttributeSumAggregation.cpp  AttributeSumAggregation.h  Buffer.h  Buffer.inl  CMakeLists.txt  CPUMeasurement.cpp  CPUMeasurement.h  CSVImporter.cpp  CSVImporter.h  HilbertMoorePattern.h  Rect.cpp  Rect.h  RectangularLayoutAlgorithm.h  RectangularTreemapLayout.h  SingleLevelHilbertMoore.cpp  SingleLevelHilbertMoore.h  Tree.cpp  Tree.h  Tree.inl  TreeNode.cpp  TreeNode.h  TreeNode.inl  TreeProcessing.cpp  TreeProcessing.h  TreemapLayouter.cpp  TreemapLayouter.h  WeightPartitioning.cpp  WeightPartitioning.h  common.cpp  common.h  conversion.cpp  conversion.h  conversion.inl  export.cpp  export.h  (+2 more)
scripts/: collect_layout_metrics.py  collect_statistics.py  filter_csv_files.sh  layout-metrics-measurements.sh  performance-measurements.sh  rename.sh  screenshots.sh  statistics.sh
thirdparties/: CMakeLists.txt
